# rusty_todo

./: .gitattributes  LICENSE  README.md  install.sh  project_todo_list.md
older_code/: main.rs
todo/: Cargo.toml
todo/doc/: settings.html
todo/doc/lib/: all.html  index.html
todo/doc/src/lib/: lib.rs.html
todo/src/: cli.yaml  lib.rs  main.rs  todo.rs
