[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
rusqlite = "0.25.3"
dirs = "3.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
